# whisper-segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt  whisper_segmentation.py
